// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const c = require('../folder/c');
module.exports = (c : string);

=====================================output=====================================
// @flow

const c = require("../folder/c");
module.exports = (c: string);

================================================================================
`;

exports[`i.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const a = require('../a');
const g = require ('../folder/g')
let m = a + g;

=====================================output=====================================
// @flow

const a = require("../a");
const g = require("../folder/g");
let m = a + g;

================================================================================
`;
